--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "assignment1",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Youssef-hany-22.github.io/assignment-1-react-",
+  "homepage": "https://Youssef-hany-22/github.io/react-1",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@testing-library/jest-dom": "^5.17.0",
